# python-builder

./: pyproject.toml
src/python-builder/: builder.py
src/python_builder/: builder.py
tests/: test_builder.py  test_dataclass_builder.py  test_pydantic_builder.py  test_regular_class_builder.py  test_slot_class_builder.py
